<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CurrencyConverter</string>
    <string name="text_menu_icon">menu_icon</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_currency">Currency</string>
    <string name="text_calculator">Calculator.</string>
    <string name="text_symbol_eur">EUR</string>
    <string name="text_enter_here">Enter amount here</string>
    <string name="text_value_here">Value shows here</string>
    <string name="text_dropdown_image">dropdown_image</string>
    <string name="text_conversion_arrow">conversion_arrow</string>
    <string name="text_convert">Convert</string>
    <string name="text_time_stamp">Mid-market exchange rate at <xliff:g example="13:38" id="timestamp">%s</xliff:g> UTC</string>
    <string name="text_icon_info">icon_info</string>
    <string name="text_past_x_days">Past <xliff:g example="30" id="num_of_days">%d</xliff:g> days</string>
    <string name="text_email_notif">Get rate alerts straight to your email box</string>
    <string name="text_something_went_wrong">Oops! Something went wrong</string>
    <string name="text_currency_country_flag">currency_country_flag</string>
    <string name="text_example">Example</string>
    <string name="text_select_a_currency">Select a currency</string>
    <string name="text_email_subscription_success_msg">Email alerts subscription successful</string>
    <string name="text_empty_chart_text">Historical data for this period is unavailable</string>
    <string name="marker_body">1 <xliff:g example="EUR" id="currencyCode">%1s</xliff:g> = <xliff:g example="4,222" id="value">%2s</xliff:g></string>
</resources>
