<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_input_field"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/et_value_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:background="@color/transparent"
        android:hint="@string/text_enter_here"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingLeft="@dimen/dimen_16dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColorHint="@color/colorMediumGray"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_currency_sym"
        app:layout_constraintRight_toRightOf="@+id/tv_currency_sym"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_value_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:hint="@string/text_value_here"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingLeft="@dimen/dimen_16dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColorHint="@color/colorMediumGray"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_currency_sym"
        app:layout_constraintRight_toRightOf="@+id/tv_currency_sym"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_currency_sym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/text_symbol_eur"
        android:textAllCaps="true"
        android:textColor="@color/colorMediumGray"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>