<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/dimen_32dp"
            tools:context=".activities.CalculatorActivity">

            <ImageView
                android:id="@+id/iv_hamburger_menu"
                android:layout_width="@dimen/dimen_25dp"
                android:layout_height="@dimen/dimen_25dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:contentDescription="@string/text_menu_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hamburger_menu" />

            <TextView
                android:id="@+id/tv_sign_up_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_hamburger_menu" />

            <TextView
                android:id="@+id/tv_currency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_70dp"
                android:text="@string/text_currency"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_hamburger_menu" />

            <TextView
                android:id="@+id/tv_calculator_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/text_calculator"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_currency_label"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/tv_currency_label"
                app:layout_constraintRight_toRightOf="@+id/tv_currency_label"
                app:layout_constraintStart_toStartOf="@+id/tv_currency_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_currency_label" />

            <include
                android:id="@+id/layout_input"
                layout="@layout/layout_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_calculator_label" />

            <include
                android:id="@+id/layout_input_conversion"
                layout="@layout/layout_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_input" />

            <include
                android:id="@+id/ll_currency_section"
                layout="@layout/layout_currency_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_input_conversion" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_convert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="@dimen/dimen_4dp"
                app:cardElevation="@dimen/dimen_4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_currency_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:text="@string/text_convert"
                    android:textColor="@color/colorLightCyan"
                    android:textSize="@dimen/text_22sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_timestamp_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginRight="@dimen/dimen_16dp"
                android:text="@string/text_time_stamp"
                android:textColor="@color/colorMuzli"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintBottom_toBottomOf="@+id/rl_caution"
                app:layout_constraintEnd_toStartOf="@+id/rl_caution"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/rl_caution"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rl_caution" />


            <RelativeLayout
                android:id="@+id/rl_caution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:background="@drawable/bg_circular_gray90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_timestamp_warning"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_timestamp_warning"
                app:layout_constraintTop_toBottomOf="@+id/btn_convert">

                <ImageView
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="15dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/text_icon_info"
                    app:srcCompat="@drawable/ic_info" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/dimen_8dp"
            app:cardCornerRadius="@dimen/dimen_32dp"
            app:cardElevation="@dimen/dimen_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_caution">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp">

                <include
                    android:id="@+id/ll_selector"
                    layout="@layout/layout_period_selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lc_currency_trend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_selector" />

                <TextView
                    android:id="@+id/tv_email_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_64dp"
                    android:text="@string/text_email_notif"
                    android:textColor="@color/colorMuzli"
                    android:textSize="@dimen/text_14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lc_currency_trend" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>